# icuas-25-kessoku

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  RULES.md  add_markers.py  build.sh  build_docker.sh  city_1_small.txt  clean_using_eigen.cpp  edges.csv  first.csv  first_run.sh  graph_visualizer.py  main.cpp  markers.blend  markers.blend1  new_planner.cpp  new_traj.py  oct_to_arr.cpp  out  output.pcd  package.xml  planner_tester.cpp  py_vis.py  solution.h  ssh_auth_sock  traj_example.txt  trajectory_coefficients.csv  traversal  traversal.cpp  traversal.ofast.cpp  traversal.ofast.hpp  traversal_try_veretx.cpp  vertex_generator.py  vis_markers.py  visibility_graph_creator.cpp  visibility_graph_crerator.cpp  voro.cpp
computation_node/: CMakeLists.txt  package.xml
computation_node/src/: computation_node.cpp
config/: aruco_parameters.yaml  charging.yaml  config.rviz  config_my.rviz  crazyflies_mrs.yaml  gz_bridge.yaml  octomap.yaml
cpp/: crazyflie_client.cpp
icuas25_competition/: CMakeLists.txt  package.xml
icuas25_competition/config/: aideck_streamer.yaml  aruco_parameters.yaml  charging.yaml  crazyflies_icuas.yaml  motion_capture.yaml
icuas25_competition/include/: utils.hpp
icuas25_competition/launch/: aideck_streamer.launch.py  aideck_streamer_tcp.launch.py  aideck_streamer_udp.launch.py  aruco_recognition.launch.py  launch.py  octomap_server.launch.py
icuas25_competition/scripts/: aideck_streamer.py  aideck_streamer_tcp.py  aideck_streamer_udp.py  battery_logger.py  crazyflie_server_reconnect.py  edit.sh  joy_emergency.py  odom_logger.py
icuas25_competition/scripts/py_sim/: plot.py
icuas25_competition/startup/: _setup.sh  session.yml
icuas25_competition/worlds/world_simple/meshes/: world_simple.binvox.bt  world_simple.ot
include/: edges.csv  first.csv  octomap_utils.hpp  old_traversal.hpp  output.pkl  planner.hpp  planner_parallel.hpp  py_vis.py  traversal  traversal.cpp  traversal.hpp  utils.hpp  viz_tree.hpp
include/sampling_based/: planner_sequential.hpp  traversal.hpp
launch/: aruco_recognition.launch.py  cf_velmux_launch.py  octomap_server.launch.py  setup_gz.bash  sitl_multiagent_text.sh
launch/drone_spawn_list/: five_example.txt  positions.txt
legacy/: octomap_utils.hpp
models/crazyflie/: model.sdf.jinja
models/crazyflie_thrust_upgrade/: model.sdf.jinja
octomap_utils/: main.cpp  sample.json
py_sim/: arc.py  gaussian.py  los.py  main.py  plot.py
route_planning/: CMakeLists.txt  install.sh  route_planning.cpp
scripts/: TransformWorld2Odom.py  add_markers.py  build.sh  calc.py  charging.py  edit.sh  extraxt_vert.py  go_to.txt  install_ext.sh  install_fcl.sh  install_ortools.sh  install_traj.sh  load_map.txt  main.py  octomap_viz.py  publish_markers.cpp  py_vis.py  trajectory_coefficients.csv  viz_markers.py  wait_for_start.sh
scripts/py_sim/: gaussian.py  generator.py  main.py  plot.py
src/: crazyflie_client.cpp  crazyflie_client_parallel.cpp  runMission.cpp  solution.json:Zone.Identifier
src/py_sim/: los.py
src/sampling_based/: crazyflie_client_parallel.cpp  crazyflie_client_sequential.cpp
src/vertex_based/: crazyflie_client.cpp
startup/: _setup.sh  generate_gazebo_bridge_yaml.sh  session.yml  start.sh
test_worlds/: aruco_markers_1.txt  aruco_markers_2.txt  aruco_markers_3.txt  maker_1.binvox  maker_1.binvox.bt  maker_2.binvox  maker_2.binvox.bt  maker_3.binvox  maker_3.stl  world_simple_1.binvox  world_simple_1.binvox.bt  world_simple_1.stl  world_simple_1_1.binvox  world_simple_2.binvox  world_simple_2.binvox.bt  world_simple_2.stl  world_simple_3.binvox  world_simple_3.binvox.bt  world_simple_3.stl
to_copy/: crazyflie_server.py
to_copy/models/crazyflie/: model.sdf.jinja
to_copy/models/crazyflie_thrust_upgrade/: model.config  model.sdf.jinja
to_move/: simple_routing_program.cc  waypoints.csv
topp_ros/cmake/: topp_ros-msg-extras.cmake  topp_ros-msg-paths.cmake  topp_rosConfig.cmake
topp_ros/launch/: toppra_uav_ugv_example.launch
topp_ros/scripts/: generate_topp_trajectory.py  generate_toppra_trajectory.py
topp_ros/srv/: GenerateTrajectory.srv
world_maker/: generator.py
worlds/: add_markers.py  city_1_small_world.sdf  city_1_world.sdf  empty.sdf  quadrilateral_vertices.csv  simple_world.sdf  vertices.csv  world_simple_1_world.sdf  world_simple_2_world.sdf  world_simple_3_world.sdf  world_simple_world.sdf
worlds/aruco_markers/aruco_marker_1/: model.config  model.sdf
worlds/aruco_markers/aruco_marker_2/: model.config  model.sdf
worlds/aruco_markers/aruco_marker_3/: model.config  model.sdf
worlds/aruco_markers/aruco_marker_4/: model.config  model.sdf
worlds/aruco_markers/aruco_marker_5/: model.config  model.sdf
worlds/city_1/: model.config  model.sdf
worlds/city_1/meshes/: city_1.binvox.bt  city_1.stl
worlds/city_1_small/: model.config  model.sdf
worlds/city_1_small/meshes/: city_1_small.binvox.bt  city_1_small.stl
worlds/world_simple/: model.config  model.sdf
worlds/world_simple/meshes/: world_simple.stl
worlds/world_simple_1/: model.config  model.sdf
worlds/world_simple_1/meshes/: world_simple_1.stl
worlds/world_simple_2/: model.config  model.sdf
worlds/world_simple_2/meshes/: world_simple_2.stl
worlds/world_simple_3/: model.config  model.sdf
worlds/world_simple_3/meshes/: world_simple_3.binvox.bt
